<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".activity.ActivityA">

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOpenActivityB"
            android:text="@string/activity_a_open_activity_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_twelve"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOpenActivityC"
            android:text="@string/activity_a_open_activity_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btnOpenActivityB"
            app:layout_constraintStart_toStartOf="@+id/btnOpenActivityB"
            app:layout_constraintEnd_toEndOf="@+id/btnOpenActivityB"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOpenActivityWithService"
            android:text="@string/activity_a_open_activity_with_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btnOpenActivityC"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>